  * PW: LSDA + Gamma tricks + task groups = not working.
        Also: pw.x -ntg 1 was activating task groups (harmless)
  * PW: corrected an old bug for Berry's phase finite electric field 
        calculations with non-orthorhombic simulation cells. Also fixed 
        an old but minor bug on averaging of Berry phases between strings
  * PW: problem with symmetrization in the noncollinear case
  * option -D__USE_3D_FFT wasn't working any longer in v.4.2.x
  * PP: calculation of ILDOS with USPP wasn't working in v.4.2.x
  * PH: elph=.true. and trans=.false. was not working any longer. 
  * PH: electron-phonon data file for q2r.x was not properly written in
        some cases (-q not in the star of q). Also: questionable syntax
        for formats in lambda.f90 was not accepted by gfortran
  * D3: k-point parallelization fixed again

Fixed in version 4.2.1:

  * CP: problem in electronic forces with OpenMP parallelization
  * real-space Q functions (tqr=.true.) not working in noncollinear case
  * XC potential in CP was not initialized when condition (rho > 10^(-30)) 
    was not satisfied; this is usually harmless but potentially dangerous
  * CP could not read data written from PW in spin-polarized cases
  * In at least some cases, cpmd2upf.x was yielding incorrect PPs
  * support for MKL incomplete (only in packaged version, not in cvs)
  * glitch in pw2wannier if / missing at the end of outdir
  * linking error when compiling qexml
  * misc problems in plotband.f90
  * the new G-space symmetrization was not working properly 
    for the magnetization in the noncollinear case
  * CP: incorrect results in parallel execution if the card K_POINTS
    was present in input and contained a point different from Gamma
  * D3: Fermi energy shift was only symmetrized on the sub-set of the
    symmetry operations that leave q unchanged.
  * plot_io.f90: for large celldm(1), there was no space between ibrav 
    and celldm. Courtesy of E. Li.